--- a/04-The Strategy pattern.ipynb
+++ b/04-The Strategy pattern.ipynb
@@ -120,7 +120,7 @@
     "        return self.algorithm.make_backgorund(image_file, size)\n",
     "    \n",
     "\n",
-    "image_file = Path.cwd() / \"ai.jpeg\"\n",
+    "image_file = Path.cwd() / \"uml/ai.jpeg\"\n",
     "desktop = Resizer(TiledStrategy())  # uncoment to see strategy\n",
     "# desktop = Resizer(CenteredStrategy())  # uncoment to see strategy\n",
     "# desktop = Resizer(ScaledStrategy())  # uncoment to see strategy\n",
