The command pattern

--- a/06-Metaclass.ipynb
+++ b/06-Metaclass.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "78eb3b38",
    "metadata": {},
    "outputs": [
@@ -45,16 +45,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:D6L:Rolled 3\n"
+      "INFO:D6L:Rolled 2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
     "    \n",
     "class D6L(DieLog):\n",
     "    def roll(self) -> None:\n",
-    "        \"\"\"Some documetation in D6L\"\"\"\n",
+    "        \"\"\"This function useses logg_roll\"\"\"\n",
     "        self.face = random.randrange(1, 7)\n",
     "        \n",
     "        \n",
