--- a/06-Metaclass.ipynb
+++ b/06-Metaclass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d67bc408",
+   "id": "9e5657b4",
    "metadata": {},
    "source": [
     "## Metaclasses\n",
@@ -115,7 +115,7 @@
     "    \n",
     "class D6L(DieLog):\n",
     "    def roll(self) -> None:\n",
-    "        \"\"\"This function useses logg_roll\"\"\"\n",
+    "        \"\"\"This function uses logg_roll\"\"\"\n",
     "        self.face = random.randrange(1, 7)\n",
     "        \n",
     "        \n",
