--- a/07-The Singleton pattern.ipynb
+++ b/07-The Singleton pattern.ipynb
@@ -6,12 +6,50 @@
    "metadata": {},
    "source": [
     "## The Singleton pattern\n",
-    "\n"
+    "\n",
+    "Singleton pattern is to allow exactly one instance of a\n",
+    "certain object to exist.\n",
+    "\n",
+    "![](uml/singleton_pattern.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
+   "id": "ce9654f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Any, Hashable\n",
+    "\n",
+    "\n",
+    "class OneOnly:\n",
+    "    _singleton = None\n",
+    "    def __new__(cls, *args: Any, **kwargs: dict[Hashable, Any]) -> \"OneOnly\":\n",
+    "        if not cls._singleton:\n",
+    "            cls._singleton = super().__new__(cls, *args, **kwargs)\n",
+    "        return cls._singleton\n",
+    "    \n",
+    "o1 = OneOnly()\n",
+    "o2 = OneOnly()\n",
+    "\n",
+    "id(o1) == id(o2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1c770e03",
    "metadata": {
     "scrolled": true
@@ -21,8 +59,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook 06-The State pattern.ipynb to script\n",
-      "[NbConvertApp] Writing 4874 bytes to test.py\n"
+      "[NbConvertApp] Converting notebook 07-The Singleton pattern.ipynb to script\n",
+      "[NbConvertApp] Writing 927 bytes to test.py\n"
      ]
     },
     {
