--- a/10-The Façade pattern.ipynb
+++ b/10-The Façade pattern.ipynb
@@ -7,30 +7,140 @@
    "source": [
     "## The Façade pattern\n",
     "\n",
-    "527"
+    "The Façade pattern is designed to provide a simple interface to a complex system of\n",
+    "components. \n",
+    "The Façade pattern is, in many ways, like the Adapter pattern. The primary\n",
+    "difference is that a Façade tries to abstract a simpler interface out of a complex one,\n",
+    "while an Adapter only tries to map one existing interface to another.\n",
+    "\n",
+    "\n",
+    "![](uml\\facade_pattern.png)\n",
+    "\n",
+    "\n",
+    "### A Façade example\n",
+    "Combine the two processes to convert `*.uml` files.\n",
+    "\n",
+    "\n",
+    "[PlantUML](https://plantuml.com)\n",
+    "\n",
+    "\n",
+    "[Installation](https://plantuml.com/starting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
+   "id": "101494da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from pathlib import Path\n",
+    "from typing import Iterator, Tuple\n",
+    "\n",
+    "class FindUML:\n",
+    "    \"\"\"\n",
+    "    >>> root = Path().absolute()\n",
+    "    >>> f = FindUML(root)\n",
+    "    >>> list(map(str, next(f.uml_file_iter())))  # doctest: +ELLIPSIS\n",
+    "    ['...facade.uml', '...facade.png']\n",
+    "    \"\"\"\n",
+    "    def __init__(self, base: Path) -> None:\n",
+    "        self.base = base\n",
+    "        self.start_pattern = re.compile(r\"@startuml *(.*)\")\n",
+    "        \n",
+    "    def uml_file_iter(self) -> Iterator[tuple[Path, Path]]:\n",
+    "        for source in self.base.glob(\"**/*.uml\"):\n",
+    "            if any(n.startswith(\".\") for n in source.parts):  # skips .hidden \n",
+    "                continue\n",
+    "            body = source.read_text()\n",
+    "            for output_name in self.start_pattern.findall(body):\n",
+    "                if output_name:\n",
+    "                    target = source.parent / output_name\n",
+    "                else:\n",
+    "                    target = source.with_suffix(\".png\")\n",
+    "                yield (\n",
+    "                    source.relative_to(self.base),\n",
+    "                    target.relative_to(self.base)\n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3251ff52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "\n",
+    "class PlantUML:\n",
+    "    conda_env_name = \"python3.11\"\n",
+    "    base_env = Path.home() / \"anaconda3\" / \"envs\" / conda_env_name\n",
+    "    \n",
+    "    def __init__(\n",
+    "        self, \n",
+    "        graphviz: Path = Path(\"bin\") / \"dot\",\n",
+    "        plantjar: Path = Path(\"uml\") /\"plantuml.jar\",\n",
+    "    ) -> None:\n",
+    "        self.graphviz = self.base_env / graphviz\n",
+    "        self.plantjar = self.base_env / plantjar\n",
+    "        \n",
+    "    def process(self, source: Path) -> None:\n",
+    "        env = {\n",
+    "            \"GRAPHVIZ_DOT\": str(self.graphviz)\n",
+    "        }\n",
+    "        command = [\n",
+    "            \"java\", \"-jar\",\n",
+    "            str(self.plantjar), \"-progress\",\n",
+    "            str(source)\n",
+    "        ]\n",
+    "        subprocess.run(command, env=env, check=True, shell=True)\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e023246b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GenerateImages:  # Façade\n",
+    "    def __init__(self, base: Path) -> None:\n",
+    "        self.finder = FindUML(base)\n",
+    "        self.painter = PlantUML()\n",
+    "        \n",
+    "    def make_all_images(self) -> None:\n",
+    "        for source, target in self.finder.uml_file_iter():\n",
+    "            if (\n",
+    "                not target.exists()\n",
+    "                or source.stat().st_mtime > target.stat().st_mtime\n",
+    "            ):\n",
+    "                print(f\"Processing {source} -> {target}\")\n",
+    "                self.painter.process(source)\n",
+    "            else:\n",
+    "                print(f\"Skipping {source} -> {target}\")\n",
+    "                \n",
+    "    \n",
+    "g = GenerateImages(Path.cwd())\n",
+    "g.make_all_images()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "1c770e03",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook 10-The Façade pattern.ipynb to script\n",
-      "[NbConvertApp] Writing 2822 bytes to test.py\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[32mSuccess: no issues found in 1 source file\u001b[m\n",
+      "\u001b[1m\u001b[92mSuccess: no issues found in 1 source file\u001b[0m\r\n",
       "\n"
      ]
     }
