--- a/06-Metaclass ABCMeta.ipynb
+++ b/06-Metaclass ABCMeta.ipynb
@@ -138,25 +138,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "069fb5fc",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook 06-Metaclass.ipynb to script\n",
-      "[NbConvertApp] Writing 2609 bytes to test.py\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m\u001b[32mSuccess: no issues found in 1 source file\u001b[m\n",
+      "\u001b[1m\u001b[92mSuccess: no issues found in 1 source file\u001b[0m\r\n",
       "\n"
      ]
     }
@@ -165,7 +157,7 @@
     "if __name__ == '__main__':        \n",
     "    import doctest\n",
     "    import subprocess\n",
-    "    name = '06-Metaclass'\n",
+    "    name = '06-Metaclass ABCMeta'\n",
     "    doctest.testmod(verbose=False)\n",
     "    subprocess.run(f'jupyter nbconvert --to script --output test \"{name}\"', shell=True)\n",
     "    std_out = subprocess.run('mypy --strict test.py', capture_output=True, shell=True).stdout\n",
