--- a/10-The Façade pattern.ipynb
+++ b/10-The Façade pattern.ipynb
@@ -24,12 +24,14 @@
     "[PlantUML](https://plantuml.com)\n",
     "\n",
     "\n",
-    "[Installation](https://plantuml.com/starting)"
+    "[Installation](https://plantuml.com/starting)\n",
+    "\n",
+    "[classdiagram](https://plantuml.com/class-diagram)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "101494da",
    "metadata": {},
    "outputs": [],
@@ -39,11 +41,12 @@
     "from typing import Iterator, Tuple\n",
     "\n",
     "class FindUML:\n",
-    "    \"\"\"\n",
+    "    \"\"\"Find uml files in sub directories\n",
+    "    \n",
     "    >>> root = Path().absolute()\n",
     "    >>> f = FindUML(root)\n",
     "    >>> list(map(str, next(f.uml_file_iter())))  # doctest: +ELLIPSIS\n",
-    "    ['...facade.uml', '...facade.png']\n",
+    "    ['...uml', '...png']\n",
     "    \"\"\"\n",
     "    def __init__(self, base: Path) -> None:\n",
     "        self.base = base\n",
@@ -62,52 +65,55 @@
     "                yield (\n",
     "                    source.relative_to(self.base),\n",
     "                    target.relative_to(self.base)\n",
-    "                )"
+    "                )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "3251ff52",
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
-    "\n",
     "class PlantUML:\n",
-    "    conda_env_name = \"python3.11\"\n",
-    "    base_env = Path.home() / \"anaconda3\" / \"envs\" / conda_env_name\n",
-    "    \n",
+    "    \"\"\"Convert *.uml files to png\"\"\"\n",
+    "\n",
     "    def __init__(\n",
     "        self, \n",
-    "        graphviz: Path = Path(\"bin\") / \"dot\",\n",
     "        plantjar: Path = Path(\"uml\") /\"plantuml.jar\",\n",
     "    ) -> None:\n",
-    "        self.graphviz = self.base_env / graphviz\n",
-    "        self.plantjar = self.base_env / plantjar\n",
+    "        self.plantjar = plantjar\n",
     "        \n",
     "    def process(self, source: Path) -> None:\n",
-    "        env = {\n",
-    "            \"GRAPHVIZ_DOT\": str(self.graphviz)\n",
-    "        }\n",
     "        command = [\n",
     "            \"java\", \"-jar\",\n",
     "            str(self.plantjar), \"-progress\",\n",
     "            str(source)\n",
     "        ]\n",
-    "        subprocess.run(command, env=env, check=True, shell=True)\n",
-    "        print()"
+    "        print(subprocess.run(command, check=True, shell=True))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e023246b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping uml\\fig.uml -> uml\\fig.png\n"
+     ]
+    }
+   ],
    "source": [
     "class GenerateImages:  # Façade\n",
+    "    \"\"\"Combine UML finder and convert Class to\n",
+    "    make png images from uml files.\"\"\"\n",
+    "    \n",
     "    def __init__(self, base: Path) -> None:\n",
     "        self.finder = FindUML(base)\n",
     "        self.painter = PlantUML()\n",
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "1c770e03",
    "metadata": {
     "scrolled": false
