--- a/10-The Façade pattern.ipynb
+++ b/10-The Façade pattern.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52a79c2a",
+   "id": "3c72c7cf",
    "metadata": {},
    "source": [
     "## The Façade pattern\n",
@@ -14,8 +14,7 @@
     "while an Adapter only tries to map one existing interface to another.\n",
     "\n",
     "\n",
-    "![](uml\\facade_pattern.png)\n",
-    "\n",
+    "![](uml/facade_pattern.png)\n",
     "\n",
     "### A Façade example\n",
     "Combine the two processes to convert `*.uml` files.\n",
@@ -31,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "101494da",
    "metadata": {},
    "outputs": [],
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "3251ff52",
    "metadata": {},
    "outputs": [],
@@ -87,17 +86,18 @@
     "        self.plantjar = plantjar\n",
     "        \n",
     "    def process(self, source: Path) -> None:\n",
-    "        command = [\n",
-    "            \"java\", \"-jar\",\n",
-    "            str(self.plantjar), \"-progress\",\n",
-    "            str(source)\n",
-    "        ]\n",
+    "#         command = [\n",
+    "#             \"java\", \"-jar\",\n",
+    "#             str(self.plantjar), \"-progress\",\n",
+    "#             str(source)\n",
+    "#         ]\n",
+    "        command = f\"java -jar {self.plantjar} -progress {source}\"\n",
     "        print(subprocess.run(command, check=True, shell=True))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "e023246b",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping uml\\fig.uml -> uml\\fig.png\n"
+      "Processing uml/fig.uml -> uml/fig.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Picked up _JAVA_OPTIONS: -Dawt.useSystemAAFontSettings=on -Dswing.aatext=true\n",
+      "[                              ] 0/1"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CompletedProcess(args='java -jar uml/plantuml.jar -progress uml/fig.uml', returncode=0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                    \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b[##############################] 1/1"
      ]
     }
    ],
