--- a/13-Builder pattern Facets.ipynb
+++ b/13-Builder pattern Facets.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "e1d0307e",
    "metadata": {},
    "outputs": [
@@ -116,18 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "1c770e03",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook 13-Builder pattern Facets.ipynb to script\n",
+      "[NbConvertApp] Writing 3091 bytes to test.py\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test.py:87: \u001b[1m\u001b[91merror:\u001b[0m \u001b[0m\u001b[1m\"PersonBuilder\"\u001b[0m has no attribute \u001b[0m\u001b[1m\"as_a\"\u001b[0m  \u001b[0m\u001b[93m[attr-defined]\u001b[0m\r\n",
-      "\u001b[1m\u001b[91mFound 1 error in 1 file (checked 1 source file)\u001b[0m\r\n",
+      "\u001b[1m\u001b[32mSuccess: no issues found in 1 source file\u001b[m\n",
       "\n"
      ]
     }
